fix part 2 - validation
