# middleware/verifyToken.js
@@ -1,15 +1,0 @@
-const jwt = require('jsonwebtoken');
-
-module.exports = (req, res, next) => {
-    const authHeader = req.headers['authorization'];
-    const token = authHeader && authHeader.split(' ')[1];
-
-    if (!token) return res.status(401).json({ message: 'Access token required' });
-    
-    jwt.verify(token, process.env.JWT_SECRET, (err, user) => {
-        if (err) return res.status(403).json({ message: 'Invalid token' });
-        req.user = user; // Attach user info to request object
-        next(); // Proceed to the next middleware or route handler
-    });
-};
-
